--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,3 +1,22 @@
+body {
+    background: var(--grey-100);
+    color: var(--grey-800);
+}
+
 p:last-child {
     margin-bottom: 0;
+}
+
+a,
+a:visited {
+    color: var(--primary-500);
+    text-decoration: none;
+}
+
+a:hover,
+a:focus,
+a:active {
+    color: var(--primary-700);
+    text-decoration: underline;
+    outline: none;
 }
