--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -27,6 +27,10 @@ pre[class*='language-'] {
     font-size: 0.9rem;
 }
 
+pre[class*='language-'] {
+    margin: 0;
+}
+
 :not(pre) > code[class*='language-'] {
     padding: 0.1em 0.25em;
 }
