--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,21 +3,27 @@
 
     --grey-100: hsl(206, 10%, 95%);
     --grey-200: hsl(206, 10%, 91%);
-    --grey-800: hsl(206, 10%, 29%);
+    --grey-600: hsl(206, 10%, 29%);
+    --grey-800: hsl(206, 10%, 15%);
 
     --primary-500: hsl(206, 90%, 50%);
     --primary-700: hsl(206, 90%, 38%);
 
     --shadow: hsla(206, 10%, 29%, 25%);
+
+    --code-background: var(--grey-800);
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --grey-100: hsl(206, 10%, 10%);
-        --grey-200: hsl(206, 10%, 15%);
-        --grey-800: hsl(206, 10%, 80%);
+        --grey-100: hsl(206, 10%, 15%);
+        --grey-200: hsl(206, 10%, 20%);
+        --grey-600: hsl(206, 10%, 80%);
+        --grey-800: hsl(206, 10%, 90%);
 
         --primary-500: hsl(206, 100%, 55%);
         --primary-700: hsl(206, 100%, 43%);
+
+        --code-background: var(--grey-200);
     }
 }
