--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -35,3 +35,15 @@ pre[class*='language-'] {
 :not(pre) > code[class*='language-'] {
     padding: 0.1em 0.25em;
 }
+
+/* Add an inset shadow over images, see: https://twitter.com/steveschoger/status/1064541476615593984 */
+.gatsby-image-wrapper::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    box-shadow: inset 0 0 20px var(--shadow);
+    content: '';
+}
