--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -8,22 +8,38 @@ p:last-child {
 }
 
 a,
-a:visited {
+a:visited,
+a .sublink,
+a:visited .sublink {
     color: var(--primary-500);
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:hover,
 a:focus,
-a:active {
+a:active,
+a:hover .sublink,
+a:focus .sublink,
+a:active .sublink {
     color: var(--primary-700);
     text-decoration: underline;
 }
 
-a:focus {
+a:focus,
+a:focus .sublink {
     outline: 2px solid currentColor;
     outline-offset: 0.2rem;
     -moz-outline-radius: 3px;
+}
+
+.link-invisible,
+.link-invisible:visited,
+.link-invisible:hover,
+.link-invisible:focus,
+.link-invisible:active {
+    color: inherit;
+    text-decoration: none;
+    outline: none;
 }
 
 .link-no-color-when-inactive:not(:hover):not(:focus):not(:active):not(:visited),
