--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,12 +10,14 @@
 
     --grey-100-light: hsl(206, 10%, 95%);
     --grey-200-light: hsl(206, 10%, 91%);
+    --grey-300-light: hsl(206, 10%, 54%);
     --grey-400-light: hsl(206, 10%, 43%);
     --grey-600-light: hsl(206, 10%, 32%);
     --grey-800-light: hsl(206, 10%, 15%);
 
     --grey-100-dark: hsl(206, 10%, 14.5%);
     --grey-200-dark: hsl(206, 10%, 19.5%);
+    --grey-300-dark: hsl(206, 10%, 44%);
     --grey-400-dark: hsl(206, 10%, 57%);
     --grey-600-dark: hsl(206, 10%, 80%);
     --grey-800-dark: hsl(206, 10%, 90%);
@@ -42,6 +44,7 @@
     /** Grey colors */
     --grey-100: var(--grey-100-light);
     --grey-200: var(--grey-200-light);
+    --grey-300: var(--grey-300-light);
     --grey-400: var(--grey-400-light);
     --grey-600: var(--grey-600-light);
     --grey-800: var(--grey-800-light);
@@ -61,6 +64,7 @@
         /** Grey colors */
         --grey-100: var(--grey-100-dark);
         --grey-200: var(--grey-200-dark);
+        --grey-300: var(--grey-300-dark);
         --grey-400: var(--grey-400-dark);
         --grey-600: var(--grey-600-dark);
         --grey-800: var(--grey-800-dark);
