--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -11,7 +11,7 @@ a,
 a:hover,
 a .sublink,
 a:hover .sublink {
-    color: var(--color-link);
+    color: var(--primary-500);
     text-decoration: underline;
 }
 
@@ -52,7 +52,7 @@ pre[class*='language-'] {
 }
 
 a > code[class*='language-'] {
-    color: var(--color-link-dark);
+    color: var(--primary-500-dark);
     text-decoration: none;
 }
 
