Improve the styles for inline code
- add a border
- use light colors when the light theme is active

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -63,14 +63,16 @@ pre[class*='language-'] {
 }
 
 :not(pre) > code[class*='language-'] {
+    border: 1px solid var(--color-border-code-inline);
     padding: 0.1em 0.25em;
-    background: var(--color-bg-code);
+    background: var(--color-bg-code-inline);
     overflow-wrap: break-word;
     word-break: break-all;
+    color: var(--grey-600);
 }
 
 a > code[class*='language-'] {
-    color: var(--primary-500-dark);
+    color: var(--primary-500);
     text-decoration: none;
 }
 
