--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -53,10 +53,14 @@
     /** Semantic colors */
 
     --color-bg-code-light: var(--grey-800-light);
+    --color-bg-code-inline-light: white;
+    --color-border-code-inline-light: var(--grey-200-light);
     --color-bg-code-highlight-light: var(--grey-700-light);
     --color-aside-link-light: var(--primary-600-light);
 
     --color-bg-code-dark: var(--grey-200-dark);
+    --color-bg-code-inline-dark: var(--grey-200-dark);
+    --color-border-code-inline-dark: var(--grey-250-dark);
     --color-bg-code-highlight-dark: var(--grey-250-dark);
     --color-aside-link-dark: var(--primary-400-dark);
 }
@@ -86,6 +90,8 @@
 
     /** Semantic colors */
     --color-bg-code: var(--color-bg-code-light);
+    --color-bg-code-inline: var(--color-bg-code-inline-light);
+    --color-border-code-inline: var(--color-border-code-inline-light);
     --color-bg-code-highlight: var(--color-bg-code-highlight-light);
     --color-aside-link: var(--color-aside-link-light);
 }
@@ -115,6 +121,8 @@
 
     /** Semantic colors */
     --color-bg-code: var(--color-bg-code-light);
+    --color-bg-code-inline: var(--color-bg-code-inline-light);
+    --color-border-code-inline: var(--color-border-code-inline-light);
     --color-bg-code-highlight: var(--color-bg-code-highlight-light);
     --color-aside-link: var(--color-aside-link-light);
 }
@@ -145,6 +153,8 @@
 
         /** Semantic colors */
         --color-bg-code: var(--color-bg-code-dark);
+        --color-bg-code-inline: var(--color-bg-code-inline-dark);
+        --color-border-code-inline: var(--color-border-code-inline-dark);
         --color-bg-code-highlight: var(--color-bg-code-highlight-dark);
         --color-aside-link: var(--color-aside-link-dark);
     }
@@ -175,6 +185,8 @@
 
     /** Semantic colors */
     --color-bg-code: var(--color-bg-code-dark);
+    --color-bg-code-inline: var(--color-bg-code-inline-dark);
+    --color-border-code-inline: var(--color-border-code-inline-dark);
     --color-bg-code-highlight: var(--color-bg-code-highlight-dark);
     --color-aside-link: var(--color-aside-link-dark);
 }
